--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <title>Document</title>
     <link rel="stylesheet" href="./index.css" />
+    <script src="localstroageLib.js"></script>
   </head>
   <body>
     <div id="app"></div>
@@ -19,6 +20,7 @@
           console.log(xmlHttp.responseText);
           try {
             const data2 = JSON.parse(xmlHttp.responseText);
+            saveData(data2);
 
             data2.forEach((element) => {
               const item = document.createElement("div");
