feat: 로컬스토리지 로직

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           try {
             const data2 = JSON.parse(xmlHttp.responseText);
             saveData(data2);
-
-            data2.forEach((element) => {
+            const data = loadData();    
+            data.forEach((element) => {
               const item = document.createElement("div");
               item.className = "phonebooke-item";
 
